@@ -1,11 +1,8 @@
 package uk.gov.companieshouse.api.testdata.controller;
 
-import jakarta.validation.Valid;
-
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -20,6 +17,8 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+
+import jakarta.validation.Valid;
 import uk.gov.companieshouse.api.testdata.Application;
 import uk.gov.companieshouse.api.testdata.exception.DataException;
 import uk.gov.companieshouse.api.testdata.exception.InvalidAuthCodeException;
@@ -55,7 +54,6 @@ import uk.gov.companieshouse.api.testdata.model.rest.UserCompanyAssociationData;
 import uk.gov.companieshouse.api.testdata.model.rest.UserCompanyAssociationSpec;
 import uk.gov.companieshouse.api.testdata.model.rest.UserData;
 import uk.gov.companieshouse.api.testdata.model.rest.UserSpec;
-import uk.gov.companieshouse.api.testdata.service.AccountPenaltiesService;
 import uk.gov.companieshouse.api.testdata.service.CompanyAuthCodeService;
 import uk.gov.companieshouse.api.testdata.service.TestDataService;
 import uk.gov.companieshouse.api.testdata.service.VerifiedIdentityService;
@@ -69,21 +67,23 @@ public class TestDataController {
     private static final Logger LOG = LoggerFactory.getLogger(Application.APPLICATION_NAME);
     private static final String STATUS = "status";
 
-    @Autowired
-    private TestDataService testDataService;
+    private final TestDataService testDataService;
+
+    private final CompanyAuthCodeService companyAuthCodeService;
+
+    private final VerifiedIdentityService<IdentityVerificationData> verifiedIdentityService;
 
     @Autowired
-    private CompanyAuthCodeService companyAuthCodeService;
-
-    @Autowired
-    private AccountPenaltiesService accountPenaltyService;
+    public TestDataController(TestDataService testDataService, CompanyAuthCodeService companyAuthCodeService, VerifiedIdentityService<IdentityVerificationData> verifiedIdentityService) {
+        super();
+        this.testDataService = testDataService;
+        this.companyAuthCodeService = companyAuthCodeService;
+        this.verifiedIdentityService = verifiedIdentityService;
+    }
 
     private static final String COMPANY_NUMBER_DATA = "company number";
     private static final String JURISDICTION_DATA = "jurisdiction";
     private static final String NEW_COMPANY_CREATED = "New company created";
-
-    @Autowired
-    private VerifiedIdentityService<IdentityVerificationData> verifiedIdentityService;
 
     /* Public endpoint to create company data */
     @PostMapping("/company")
@@ -387,7 +387,7 @@ public class TestDataController {
                     accountPenaltiesData.getPenalties().stream()
                             .filter(penalty -> transactionReference.equals(
                                     penalty.getTransactionReference()))
-                            .collect(Collectors.toList())
+                            .toList()
             );
         }
         return ResponseEntity.ok(accountPenaltiesData);
